<resources>
    <string name="app_name">MlMobile</string>
    <string name="entertip">立即体验</string>
    <string name="login">登陆</string>
    <string name="cancel">取消</string>
    <string name="loginnametip">请输入用户名</string>
    <string name="loginpsdtip">请输入密码</string>
    <string name="dialogtip">友情提示</string>
    <string name="noconnect">暂未连接到机器</string>
    <string name="suretip">确认</string>
    <string name="nousername">输入不完整</string>
    <string name="loading">程序加载中</string>
    <string name="loginfailure">登陆失败</string>
    <string name="calibration">标定</string>
    <string name="check">检测</string>
    <string name="search">查询</string>
    <string name="seeting">设置</string>
    <string name="exitinfo">再按一次退出程序</string>
    <string name="about">关于我们</string>
</resources>
