<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />
        </RelativeLayout>

        <EditText
            android:id="@+id/edUserName"
            style="@style/WhiteEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_edittext"
            android:hint="@string/loginnametip"
            android:inputType="textVisiblePassword" />

        <EditText
            android:id="@+id/edPassword"
            style="@style/WhiteEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loginpsdtip"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/btLogin"
            style="@style/CicleButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <Button
            android:id="@+id/btCancel"
            style="@style/CicleButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>
</RelativeLayout>