<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/dialog_toptext_padding"
        android:text="@string/dialogtip" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:background="@color/borderColor"
        app:layout_constraintTop_toTopOf="parent"></View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_content_height">

        <TextView
            android:id="@+id/tvcontent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/noconnect" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:background="@color/borderColor"
        app:layout_constraintTop_toTopOf="parent"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPostive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:padding="@dimen/dialog_toptext_padding"
                android:text="@string/suretip" />
        </LinearLayout>

        <View
            android:layout_width="0.5sp"
            android:layout_height="match_parent"
            android:background="@color/borderColor" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNegative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:padding="@dimen/dialog_toptext_padding"
                android:text="@string/cancel" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>